tests/diagnostics/negative/import_cycle.must
error[MOD_E_IMPORT_CYCLE] module_resolution: import cycle detected
import cycle reaches cycle/diagnostics/mod
import chain:
closest module: break the cycle with an interface split
